--- a/index.html
+++ b/index.html
@@ -116,5 +116,12 @@
         </div>
       </div>
     </main>
+
+    <footer>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./bookmarks.html">Bookmarks</a>
+      </nav>
+    </footer>
   </body>
 </html>
