--- a/bookmarks.html
+++ b/bookmarks.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ivan-quiz-app</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <header>
+      <h1 class="title">Friends Quiz</h1>
+    </header>
+
+    <footer>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./bookmarks.html">Bookmarks</a>
+      </nav>
+    </footer>
+  </body>
 </html>
