added css folder and files

--- a/index.html
+++ b/index.html
@@ -119,8 +119,15 @@
 
     <footer>
       <nav>
-        <a href="./index.html">Home</a>
-        <a href="./bookmarks.html">Bookmarks</a>
+        <a href="./index.html">
+          <img src="./resources/home_filled.png" alt="home icon" />
+        </a>
+        <a href="./bookmarks.html">
+          <img src="./resources/bookmark_transparent.png" alt="bookmark icon" />
+        </a>
+        <a href="./profile.html">
+          <img src="./resources/profile.png" alt="profile icon" />
+        </a>
       </nav>
     </footer>
   </body>
