--- a/bookmarks.html
+++ b/bookmarks.html
@@ -14,8 +14,15 @@
 
     <footer>
       <nav>
-        <a href="./index.html">Home</a>
-        <a href="./bookmarks.html">Bookmarks</a>
+        <a href="./index.html">
+          <img src="./resources/home.png" alt="home icon" />
+        </a>
+        <a href="./bookmarks.html">
+          <img src="./resources/bookmark_filled.png" alt="bookmark icon" />
+        </a>
+        <a href="./profile.html">
+          <img src="./resources/profile.png" alt="profile icon" />
+        </a>
       </nav>
     </footer>
   </body>
