--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ivan-quiz-app</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./global.css" />
   </head>
   <body>
     <header>
@@ -12,108 +13,106 @@
     </header>
 
     <main>
-      <div class="question-card">
-        <div class="guestion-card-1">
-          <body>
-            <p>
-              What is the name of the coffee shop where the Friends gang
-              frequently hangs out?
-            </p>
-            <button>Show Answer</button>
-            <p class="tag">#coffeshop</p>
-            <p class="tag">#friends</p>
-          </body>
-        </div>
+      <div class="question-card question-card-1">
+        <body>
+          <p>
+            What is the name of the coffee shop where the Friends gang
+            frequently hangs out?
+          </p>
+          <button>Show Answer</button>
+          <p class="tag">#coffeshop</p>
+          <p class="tag">#friends</p>
+        </body>
+      </div>
 
-        <div class="guestion-card-2">
-          <body>
-            <p>
-              What is the surname of Ross and Monica, two of the main characters
-              in Friends?
-            </p>
-            <button>Show Answer</button>
-            <p class="tag">#Monica</p>
-            <p class="tag">#Ross</p>
-          </body>
-        </div>
+      <div class="question-card question-card-2">
+        <body>
+          <p>
+            What is the surname of Ross and Monica, two of the main characters
+            in Friends?
+          </p>
+          <button>Show Answer</button>
+          <p class="tag">#Monica</p>
+          <p class="tag">#Ross</p>
+        </body>
+      </div>
 
-        <div class="guestion-card-3">
-          <body>
-            <p>
-              Which character famously yelled "We were on a break!" during a
-              relationship dispute?
-            </p>
-            <button>Show Answer</button>
-            <p class="tag">#friends</p>
-          </body>
-        </div>
+      <div class="question-card question-card-3">
+        <body>
+          <p>
+            Which character famously yelled "We were on a break!" during a
+            relationship dispute?
+          </p>
+          <button>Show Answer</button>
+          <p class="tag">#friends</p>
+        </body>
+      </div>
 
-        <div class="guestion-card-4">
-          <body>
-            <p>
-              What is the name of Phoebe's quirky, often nonsensical song about
-              a smelly cat?
-            </p>
-            <button>Show Answer</button>
-            <p class="tag">#Phoebe</p>
-            <p class="tag">#cat</p>
-          </body>
-        </div>
+      <div class="question-card question-card-4">
+        <body>
+          <p>
+            What is the name of Phoebe's quirky, often nonsensical song about a
+            smelly cat?
+          </p>
+          <button>Show Answer</button>
+          <p class="tag">#Phoebe</p>
+          <p class="tag">#cat</p>
+        </body>
+      </div>
 
-        <div class="guestion-card-5">
-          <body>
-            <p>What does Joey never share?</p>
-            <button>Show Answer</button>
-            <p class="tag">#Joey</p>
-            <p class="tag">#friends</p>
-          </body>
-        </div>
+      <div class="question-card question-card-5">
+        <body>
+          <p>What does Joey never share?</p>
+          <button>Show Answer</button>
+          <p class="tag">#Joey</p>
+          <p class="tag">#friends</p>
+        </body>
+      </div>
 
-        <div class="guestion-card-6">
-          <body>
-            <p>What is Chandler's last name?</p>
-            <button>Show Answer</button>
-            <p class="tag">#Chandler</p>
-            <p class="tag">#friends</p>
-          </body>
-        </div>
+      <div class="question-card question-card-6">
+        <body>
+          <p>What is Chandler's last name?</p>
+          <button>Show Answer</button>
+          <p class="tag">#Chandler</p>
+          <p class="tag">#friends</p>
+        </body>
+      </div>
 
-        <div class="guestion-card-7">
-          <body>
-            <p>Which character is a paleontologist by profession?</p>
-            <button>Show Answer</button>
-            <p class="tag">#paleontologist</p>
-            <p class="tag">#friends</p>
-          </body>
-        </div>
+      <div class="question-card question-card-7">
+        <body>
+          <p>Which character is a paleontologist by profession?</p>
+          <button>Show Answer</button>
+          <p class="tag">#paleontologist</p>
+          <p class="tag">#friends</p>
+        </body>
+      </div>
 
-        <div class="guestion-card-8">
-          <body>
-            <p>What is the name of Rachel's daughter?</p>
-            <button>Show Answer</button>
-            <p class="tag">#Rachel</p>
-            <p class="tag">#daughter</p>
-          </body>
-        </div>
+      <div class="question-card question-card-8">
+        <body>
+          <p>What is the name of Rachel's daughter?</p>
+          <button>Show Answer</button>
+          <p class="tag">#Rachel</p>
+          <p class="tag">#daughter</p>
+        </body>
+      </div>
 
-        <div class="guestion-card-9">
-          <body>
-            <p>
-              Which character famously says "How you doin'?" as a pick-up line?
-            </p>
-            <button>Show Answer</button>
-            <p class="tag">#friends</p>
-          </body>
-        </div>
+      <div class="question-card question-card-9">
+        <body>
+          <p>
+            Which character famously says "How you doin'?" as a pick-up line?
+          </p>
+          <button>Show Answer</button>
+          <p class="tag">#friends</p>
+        </body>
+      </div>
 
-        <div class="guestion-card-10">
-          <body>
-            <p>What is the profession of Chandler's wife, Monica?</p>
-            <button>Show Answer</button>
-            <p class="tag">#Monica</p>
-            <p class="tag">#Chandler</p>
-          </body>
-        </div>
+      <div class="question-card question-card-10">
+        <body>
+          <p>What is the profession of Chandler's wife, Monica?</p>
+          <button>Show Answer</button>
+          <p class="tag">#Monica</p>
+          <p class="tag">#Chandler</p>
+        </body>
       </div>
     </main>
 
