additinal changes in design on main page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ivan-quiz-app</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./global.css" />
   </head>
   <body>
@@ -13,119 +13,155 @@
     </header>
 
     <main>
-      <div class="question-card question-card-1">
-        <body>
-          <p>
-            What is the name of the coffee shop where the Friends gang
-            frequently hangs out?
-          </p>
-          <button>Show Answer</button>
-          <p class="tag">#coffeshop</p>
-          <p class="tag">#friends</p>
-        </body>
-      </div>
+      <section>
+        <div class="question-card question-card-1">
+          <section>
+            <h4>
+              What is the name of the coffee shop where the Friends gang
+              frequently hangs out?
+            </h4>
+            <button>Show Answer</button>
+            <section class="tag-container">
+              <p class="tag">#coffeshop</p>
+              <p class="tag">#friends</p>
+            </section>
+          </section>
+        </div>
 
-      <div class="question-card question-card-2">
-        <body>
-          <p>
-            What is the surname of Ross and Monica, two of the main characters
-            in Friends?
-          </p>
-          <button>Show Answer</button>
-          <p class="tag">#Monica</p>
-          <p class="tag">#Ross</p>
-        </body>
-      </div>
+        <div class="question-card question-card-2">
+          <section>
+            <h4>
+              What is the surname of Ross and Monica, two of the main characters
+              in Friends?
+            </h4>
+            <button>Show Answer</button>
+            <section class="tag-container">
+              <p class="tag">#Monica</p>
+              <p class="tag">#Ross</p>
+            </section>
+          </section>
+        </div>
 
-      <div class="question-card question-card-3">
-        <body>
-          <p>
-            Which character famously yelled "We were on a break!" during a
-            relationship dispute?
-          </p>
-          <button>Show Answer</button>
-          <p class="tag">#friends</p>
-        </body>
-      </div>
+        <div class="question-card question-card-3">
+          <section>
+            <h4>
+              Which character famously yelled "We were on a break!" during a
+              relationship dispute?
+            </h4>
+            <button>Show Answer</button>
+            <section class="tag-container">
+              <p class="tag">#friends</p>
+              <p class="tag">#break</p>
+            </section>
+          </section>
+        </div>
 
-      <div class="question-card question-card-4">
-        <body>
-          <p>
-            What is the name of Phoebe's quirky, often nonsensical song about a
-            smelly cat?
-          </p>
-          <button>Show Answer</button>
-          <p class="tag">#Phoebe</p>
-          <p class="tag">#cat</p>
-        </body>
-      </div>
+        <div class="question-card question-card-4">
+          <section>
+            <h4>
+              What is the name of Phoebe's quirky, often nonsensical song about
+              a smelly cat?
+            </h4>
+            <button>Show Answer</button>
+            <section class="tag-container">
+              <p class="tag">#Phoebe</p>
+              <p class="tag">#cat</p>
+            </section>
+          </section>
+        </div>
 
-      <div class="question-card question-card-5">
-        <body>
-          <p>What does Joey never share?</p>
-          <button>Show Answer</button>
-          <p class="tag">#Joey</p>
-          <p class="tag">#friends</p>
-        </body>
-      </div>
+        <div class="question-card question-card-5">
+          <section>
+            <h4>What does Joey never share?</h4>
+            <button>Show Answer</button>
+            <section class="tag-container">
+              <p class="tag">#Joey</p>
+              <p class="tag">#friends</p>
+            </section>
+          </section>
+        </div>
 
-      <div class="question-card question-card-6">
-        <body>
-          <p>What is Chandler's last name?</p>
-          <button>Show Answer</button>
-          <p class="tag">#Chandler</p>
-          <p class="tag">#friends</p>
-        </body>
-      </div>
+        <div class="question-card question-card-6">
+          <section>
+            <h4>What is Chandler's last name?</h4>
+            <button>Show Answer</button>
+            <section class="tag-container">
+              <p class="tag">#Chandler</p>
+              <p class="tag">#friends</p>
+            </section>
+          </section>
+        </div>
 
-      <div class="question-card question-card-7">
-        <body>
-          <p>Which character is a paleontologist by profession?</p>
-          <button>Show Answer</button>
-          <p class="tag">#paleontologist</p>
-          <p class="tag">#friends</p>
-        </body>
-      </div>
+        <div class="question-card question-card-7">
+          <section>
+            <h4>Which character is a paleontologist by profession?</h4>
+            <button>Show Answer</button>
+            <section class="tag-container">
+              <p class="tag">#paleontologist</p>
+              <p class="tag">#friends</p>
+            </section>
+          </section>
+        </div>
 
-      <div class="question-card question-card-8">
-        <body>
-          <p>What is the name of Rachel's daughter?</p>
-          <button>Show Answer</button>
-          <p class="tag">#Rachel</p>
-          <p class="tag">#daughter</p>
-        </body>
-      </div>
+        <div class="question-card question-card-8">
+          <section>
+            <h4>What is the name of Rachel's daughter?</h4>
+            <button>Show Answer</button>
+            <section class="tag-container">
+              <p class="tag">#Rachel</p>
+              <p class="tag">#daughter</p>
+            </section>
+          </section>
+        </div>
 
-      <div class="question-card question-card-9">
-        <body>
-          <p>
-            Which character famously says "How you doin'?" as a pick-up line?
-          </p>
-          <button>Show Answer</button>
-          <p class="tag">#friends</p>
-        </body>
-      </div>
+        <div class="question-card question-card-9">
+          <section>
+            <h4>
+              Which character famously says "How you doin'?" as a pick-up line?
+            </h4>
+            <button>Show Answer</button>
+            <section class="tag-container">
+              <p class="tag">#friends</p>
+              <p class="tag">#line</p>
+            </section>
+          </section>
+        </div>
 
-      <div class="question-card question-card-10">
-        <body>
-          <p>What is the profession of Chandler's wife, Monica?</p>
-          <button>Show Answer</button>
-          <p class="tag">#Monica</p>
-          <p class="tag">#Chandler</p>
-        </body>
-      </div>
+        <div class="question-card question-card-10">
+          <section>
+            <h4>What is the profession of Chandler's wife, Monica?</h4>
+            <button>Show Answer</button>
+            <section class="tag-container">
+              <p class="tag">#Monica</p>
+              <p class="tag">#Chandler</p>
+            </section>
+          </section>
+        </div>
+      </section>
     </main>
 
     <footer>
-      <nav>
+      <nav class="navigation-bar">
         <a href="./index.html">
-          <img src="./resources/home_filled.png" alt="home icon" />
+          <img
+            class="footer"
+            src="./resources/home_filled.png"
+            alt="home icon"
+          />
         </a>
         <a href="./bookmarks.html">
-          <img src="./resources/bookmark_transparent.png" alt="bookmark icon" />
+          <img
+            class="footer"
+            src="./resources/bookmark_transparent.png"
+            alt="bookmark icon"
+          />
         </a>
         <a href="./profile.html">
-          <img src="./resources/profile.png" alt="profile icon" />
+          <img
+            class="footer"
+            src="./resources/profile.png"
+            alt="profile icon"
+          />
         </a>
       </nav>
     </footer>
