worked on the main website

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       <section>
         <div class="question-card question-card-1">
           <section>
+            <img
+              class="bookmark-transparent"
+              src="./resources/bookmark.png"
+              alt="bookmark transparent"
+            />
             <h4>
               What is the name of the coffee shop where the Friends gang
               frequently hangs out?
@@ -30,6 +35,11 @@
 
         <div class="question-card question-card-2">
           <section>
+            <img
+              class="bookmark-transparent"
+              src="./resources/bookmark.png"
+              alt="bookmark transparent"
+            />
             <h4>
               What is the surname of Ross and Monica, two of the main characters
               in Friends?
@@ -44,6 +54,11 @@
 
         <div class="question-card question-card-3">
           <section>
+            <img
+              class="bookmark-transparent"
+              src="./resources/bookmark.png"
+              alt="bookmark transparent"
+            />
             <h4>
               Which character famously yelled "We were on a break!" during a
               relationship dispute?
@@ -58,6 +73,11 @@
 
         <div class="question-card question-card-4">
           <section>
+            <img
+              class="bookmark-transparent"
+              src="./resources/bookmark.png"
+              alt="bookmark transparent"
+            />
             <h4>
               What is the name of Phoebe's quirky, often nonsensical song about
               a smelly cat?
@@ -72,6 +92,11 @@
 
         <div class="question-card question-card-5">
           <section>
+            <img
+              class="bookmark-transparent"
+              src="./resources/bookmark.png"
+              alt="bookmark transparent"
+            />
             <h4>What does Joey never share?</h4>
             <button>Show Answer</button>
             <section class="tag-container">
@@ -83,6 +108,11 @@
 
         <div class="question-card question-card-6">
           <section>
+            <img
+              class="bookmark-transparent"
+              src="./resources/bookmark.png"
+              alt="bookmark transparent"
+            />
             <h4>What is Chandler's last name?</h4>
             <button>Show Answer</button>
             <section class="tag-container">
@@ -94,6 +124,11 @@
 
         <div class="question-card question-card-7">
           <section>
+            <img
+              class="bookmark-transparent"
+              src="./resources/bookmark.png"
+              alt="bookmark transparent"
+            />
             <h4>Which character is a paleontologist by profession?</h4>
             <button>Show Answer</button>
             <section class="tag-container">
@@ -105,6 +140,11 @@
 
         <div class="question-card question-card-8">
           <section>
+            <img
+              class="bookmark-transparent"
+              src="./resources/bookmark.png"
+              alt="bookmark transparent"
+            />
             <h4>What is the name of Rachel's daughter?</h4>
             <button>Show Answer</button>
             <section class="tag-container">
@@ -116,6 +156,11 @@
 
         <div class="question-card question-card-9">
           <section>
+            <img
+              class="bookmark-transparent"
+              src="./resources/bookmark.png"
+              alt="bookmark transparent"
+            />
             <h4>
               Which character famously says "How you doin'?" as a pick-up line?
             </h4>
@@ -129,6 +174,11 @@
 
         <div class="question-card question-card-10">
           <section>
+            <img
+              class="bookmark-transparent"
+              src="./resources/bookmark.png"
+              alt="bookmark transparent"
+            />
             <h4>What is the profession of Chandler's wife, Monica?</h4>
             <button>Show Answer</button>
             <section class="tag-container">
