fixed background colour

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4>
+            <h4 class="question-title">
               What is the name of the coffee shop where the Friends gang
               frequently hangs out?
             </h4>
@@ -40,7 +40,7 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4>
+            <h4 class="question-title">
               What is the surname of Ross and Monica, two of the main characters
               in Friends?
             </h4>
@@ -59,7 +59,7 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4>
+            <h4 class="question-title">
               Which character famously yelled "We were on a break!" during a
               relationship dispute?
             </h4>
@@ -78,7 +78,7 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4>
+            <h4 class="question-title">
               What is the name of Phoebe's quirky, often nonsensical song about
               a smelly cat?
             </h4>
@@ -97,7 +97,7 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4>What does Joey never share?</h4>
+            <h4 class="question-title">What does Joey never share?</h4>
             <button>Show Answer</button>
             <section class="tag-container">
               <p class="tag">#Joey</p>
@@ -113,7 +113,7 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4>What is Chandler's last name?</h4>
+            <h4 class="question-title">What is Chandler's last name?</h4>
             <button>Show Answer</button>
             <section class="tag-container">
               <p class="tag">#Chandler</p>
@@ -129,7 +129,9 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4>Which character is a paleontologist by profession?</h4>
+            <h4 class="question-title">
+              Which character is a paleontologist by profession?
+            </h4>
             <button>Show Answer</button>
             <section class="tag-container">
               <p class="tag">#paleontologist</p>
@@ -145,7 +147,9 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4>What is the name of Rachel's daughter?</h4>
+            <h4 class="question-title">
+              What is the name of Rachel's daughter?
+            </h4>
             <button>Show Answer</button>
             <section class="tag-container">
               <p class="tag">#Rachel</p>
@@ -161,7 +165,7 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4>
+            <h4 class="question-title">
               Which character famously says "How you doin'?" as a pick-up line?
             </h4>
             <button>Show Answer</button>
@@ -179,7 +183,9 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4>What is the profession of Chandler's wife, Monica?</h4>
+            <h4 class="question-title">
+              What is the profession of Chandler's wife, Monica?
+            </h4>
             <button>Show Answer</button>
             <section class="tag-container">
               <p class="tag">#Monica</p>
