--- a/bookmarks.html
+++ b/bookmarks.html
@@ -3,26 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="global.css" />
     <title>ivan-quiz-app</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./global.css" />
   </head>
-
   <body>
     <header>
       <h1 class="title">Friends Quiz</h1>
     </header>
 
     <footer>
-      <nav>
+      <nav class="navigation-bar">
         <a href="./index.html">
-          <img src="./resources/home.png" alt="home icon" />
+          <img class="footer" src="./resources/home.png" alt="home icon" />
         </a>
         <a href="./bookmarks.html">
-          <img src="./resources/bookmark_filled.png" alt="bookmark icon" />
+          <img
+            class="footer"
+            src="./resources/bookmark_filled.png"
+            alt="bookmark icon"
+          />
         </a>
         <a href="./profile.html">
-          <img src="./resources/profile.png" alt="profile icon" />
+          <img
+            class="footer"
+            src="./resources/profile.png"
+            alt="profile icon"
+          />
         </a>
       </nav>
     </footer>
