--- a/profile.html
+++ b/profile.html
@@ -3,8 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="global.css" />
     <title>ivan-quiz-app</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 class="title">Friends Quiz</h1>
+    </header>
+
+    <footer>
+      <nav class="navigation-bar">
+        <a href="./index.html">
+          <img class="footer" src="./resources/home.png" alt="home icon" />
+        </a>
+        <a href="./bookmarks.html">
+          <img
+            class="footer"
+            src="./resources/bookmark_transparent.png"
+            alt="bookmark icon"
+          />
+        </a>
+        <a href="./profile.html">
+          <img
+            class="footer"
+            src="./resources/profile_filled.png"
+            alt="profile icon"
+          />
+        </a>
+      </nav>
+    </footer>
+  </body>
 </html>
