additional changes in font

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               alt="bookmark transparent"
             />
             <h4 class="question-title">
-              What is the name of the coffee shop where the Friends gang
+              1. What is the name of the coffee shop where the Friends gang
               frequently hangs out?
             </h4>
             <button>Show Answer</button>
@@ -41,8 +41,8 @@
               alt="bookmark transparent"
             />
             <h4 class="question-title">
-              What is the surname of Ross and Monica, two of the main characters
-              in Friends?
+              2. What is the surname of Ross and Monica, two of the main
+              characters in Friends?
             </h4>
             <button>Show Answer</button>
             <section class="tag-container">
@@ -60,7 +60,7 @@
               alt="bookmark transparent"
             />
             <h4 class="question-title">
-              Which character famously yelled "We were on a break!" during a
+              3. Which character famously yelled "We were on a break!" during a
               relationship dispute?
             </h4>
             <button>Show Answer</button>
@@ -79,8 +79,8 @@
               alt="bookmark transparent"
             />
             <h4 class="question-title">
-              What is the name of Phoebe's quirky, often nonsensical song about
-              a smelly cat?
+              4. What is the name of Phoebe's quirky, often nonsensical song
+              about a smelly cat?
             </h4>
             <button>Show Answer</button>
             <section class="tag-container">
@@ -97,7 +97,7 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4 class="question-title">What does Joey never share?</h4>
+            <h4 class="question-title">5. What does Joey never share?</h4>
             <button>Show Answer</button>
             <section class="tag-container">
               <p class="tag">#Joey</p>
@@ -113,7 +113,7 @@
               src="./resources/bookmark.png"
               alt="bookmark transparent"
             />
-            <h4 class="question-title">What is Chandler's last name?</h4>
+            <h4 class="question-title">6. What is Chandler's last name?</h4>
             <button>Show Answer</button>
             <section class="tag-container">
               <p class="tag">#Chandler</p>
@@ -130,7 +130,7 @@
               alt="bookmark transparent"
             />
             <h4 class="question-title">
-              Which character is a paleontologist by profession?
+              7. Which character is a paleontologist by profession?
             </h4>
             <button>Show Answer</button>
             <section class="tag-container">
@@ -148,7 +148,7 @@
               alt="bookmark transparent"
             />
             <h4 class="question-title">
-              What is the name of Rachel's daughter?
+              8. What is the name of Rachel's daughter?
             </h4>
             <button>Show Answer</button>
             <section class="tag-container">
@@ -166,7 +166,8 @@
               alt="bookmark transparent"
             />
             <h4 class="question-title">
-              Which character famously says "How you doin'?" as a pick-up line?
+              9. Which character famously says "How you doin'?" as a pick-up
+              line?
             </h4>
             <button>Show Answer</button>
             <section class="tag-container">
@@ -184,7 +185,7 @@
               alt="bookmark transparent"
             />
             <h4 class="question-title">
-              What is the profession of Chandler's wife, Monica?
+              10. What is the profession of Chandler's wife, Monica?
             </h4>
             <button>Show Answer</button>
             <section class="tag-container">
