--- a/bookmarks.html
+++ b/bookmarks.html
@@ -3,14 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+
     <link rel="stylesheet" href="global.css" />
     <title>ivan-quiz-app</title>
   </head>
   <body>
     <header>
-      <h1 class="title">Friends Quiz</h1>
+      <h1 class="title">F.r.i.e.n.d.s Quiz</h1>
     </header>
+
+    <main>
+      <div class="question-card question-card-2">
+        <section>
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark_filled.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">
+            2. What is the surname of Ross and Monica, two of the main
+            characters in Friends?
+          </h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#Monica</p>
+            <p class="tag">#Ross</p>
+          </section>
+        </section>
+      </div>
+    </main>
 
     <footer>
       <nav class="navigation-bar">
