--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ivan-quiz-app</title>
-    <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./global.css" />
   </head>
   <body>
     <header>
-      <h1 class="title">Friends Quiz</h1>
+      <h1 class="title">F.r.i.e.n.d.s Quiz</h1>
     </header>
 
     <main>
@@ -37,7 +36,7 @@
           <section>
             <img
               class="bookmark-transparent"
-              src="./resources/bookmark.png"
+              src="./resources/bookmark_filled.png"
               alt="bookmark transparent"
             />
             <h4 class="question-title">
