--- a/profile.html
+++ b/profile.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+
     <link rel="stylesheet" href="global.css" />
     <title>ivan-quiz-app</title>
   </head>
   <body>
     <header>
-      <h1 class="title">Friends Quiz</h1>
+      <h1 class="title">F.r.i.e.n.d.s Quiz</h1>
     </header>
 
     <footer>
