--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ivan-quiz-app</title>
     <link rel="stylesheet" href="./global.css" />
   </head>
+
   <body>
     <header>
       <h1 class="title">F.r.i.e.n.d.s Quiz</h1>
@@ -200,21 +201,21 @@
       <nav class="navigation-bar">
         <a href="./index.html">
           <img
-            class="footer"
+            class="footer--icon"
             src="./resources/home_filled.png"
             alt="home icon"
           />
         </a>
         <a href="./bookmarks.html">
           <img
-            class="footer"
+            class="footer--icon"
             src="./resources/bookmark_transparent.png"
             alt="bookmark icon"
           />
         </a>
         <a href="./profile.html">
           <img
-            class="footer"
+            class="footer--icon"
             src="./resources/profile.png"
             alt="profile icon"
           />
