--- a/profile.html
+++ b/profile.html
@@ -15,18 +15,22 @@
     <footer>
       <nav class="navigation-bar">
         <a href="./index.html">
-          <img class="footer" src="./resources/home.png" alt="home icon" />
+          <img
+            class="footer--icon"
+            src="./resources/home.png"
+            alt="home icon"
+          />
         </a>
         <a href="./bookmarks.html">
           <img
-            class="footer"
+            class="footer--icon"
             src="./resources/bookmark_transparent.png"
             alt="bookmark icon"
           />
         </a>
         <a href="./profile.html">
           <img
-            class="footer"
+            class="footer--icon"
             src="./resources/profile_filled.png"
             alt="profile icon"
           />
