--- a/bookmarks.html
+++ b/bookmarks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>ivan-quiz-app</title>
   </head>
   <body>
@@ -13,24 +13,22 @@
     </header>
 
     <main>
-      <div class="question-card question-card-2">
-        <section>
-          <img
-            class="bookmark-transparent"
-            src="./resources/bookmark_filled.png"
-            alt="bookmark transparent"
-          />
-          <h4 class="question-title">
-            2. What is the surname of Ross and Monica, two of the main
-            characters in Friends?
-          </h4>
-          <button>Show Answer</button>
-          <section class="tag-container">
-            <p class="tag">#Monica</p>
-            <p class="tag">#Ross</p>
-          </section>
+      <section class="question-card">
+        <img
+          class="bookmark-transparent"
+          src="./resources/bookmark_filled.png"
+          alt="bookmark transparent"
+        />
+        <h4 class="question-title">
+          2. What is the surname of Ross and Monica, two of the main characters
+          in Friends?
+        </h4>
+        <button>Show Answer</button>
+        <section class="tag-container">
+          <p class="tag">#Monica</p>
+          <p class="tag">#Ross</p>
         </section>
-      </div>
+      </section>
     </main>
 
     <footer>
