--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ivan-quiz-app</title>
-    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
 
   <body>
@@ -14,186 +14,165 @@
 
     <main>
       <section>
-        <div class="question-card question-card-1">
-          <section>
-            <img
-              class="bookmark-transparent"
-              src="./resources/bookmark.png"
-              alt="bookmark transparent"
-            />
-            <h4 class="question-title">
-              1. What is the name of the coffee shop where the Friends gang
-              frequently hangs out?
-            </h4>
-            <button>Show Answer</button>
-            <section class="tag-container">
-              <p class="tag">#coffeshop</p>
-              <p class="tag">#friends</p>
-            </section>
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">
+            1. What is the name of the coffee shop where the Friends gang
+            frequently hangs out?
+          </h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#coffeshop</p>
+            <p class="tag">#friends</p>
           </section>
-        </div>
+        </section>
 
-        <div class="question-card question-card-2">
-          <section>
-            <img
-              class="bookmark-transparent"
-              src="./resources/bookmark_filled.png"
-              alt="bookmark transparent"
-            />
-            <h4 class="question-title">
-              2. What is the surname of Ross and Monica, two of the main
-              characters in Friends?
-            </h4>
-            <button>Show Answer</button>
-            <section class="tag-container">
-              <p class="tag">#Monica</p>
-              <p class="tag">#Ross</p>
-            </section>
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark_filled.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">
+            2. What is the surname of Ross and Monica, two of the main
+            characters in Friends?
+          </h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#Monica</p>
+            <p class="tag">#Ross</p>
           </section>
-        </div>
+        </section>
 
-        <div class="question-card question-card-3">
-          <section>
-            <img
-              class="bookmark-transparent"
-              src="./resources/bookmark.png"
-              alt="bookmark transparent"
-            />
-            <h4 class="question-title">
-              3. Which character famously yelled "We were on a break!" during a
-              relationship dispute?
-            </h4>
-            <button>Show Answer</button>
-            <section class="tag-container">
-              <p class="tag">#friends</p>
-              <p class="tag">#break</p>
-            </section>
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">
+            3. Which character famously yelled "We were on a break!" during a
+            relationship dispute?
+          </h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#friends</p>
+            <p class="tag">#break</p>
           </section>
-        </div>
+        </section>
 
-        <div class="question-card question-card-4">
-          <section>
-            <img
-              class="bookmark-transparent"
-              src="./resources/bookmark.png"
-              alt="bookmark transparent"
-            />
-            <h4 class="question-title">
-              4. What is the name of Phoebe's quirky, often nonsensical song
-              about a smelly cat?
-            </h4>
-            <button>Show Answer</button>
-            <section class="tag-container">
-              <p class="tag">#Phoebe</p>
-              <p class="tag">#cat</p>
-            </section>
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">
+            4. What is the name of Phoebe's quirky, often nonsensical song about
+            a smelly cat?
+          </h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#Phoebe</p>
+            <p class="tag">#cat</p>
           </section>
-        </div>
+        </section>
 
-        <div class="question-card question-card-5">
-          <section>
-            <img
-              class="bookmark-transparent"
-              src="./resources/bookmark.png"
-              alt="bookmark transparent"
-            />
-            <h4 class="question-title">5. What does Joey never share?</h4>
-            <button>Show Answer</button>
-            <section class="tag-container">
-              <p class="tag">#Joey</p>
-              <p class="tag">#friends</p>
-            </section>
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">5. What does Joey never share?</h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#Joey</p>
+            <p class="tag">#friends</p>
           </section>
-        </div>
+        </section>
 
-        <div class="question-card question-card-6">
-          <section>
-            <img
-              class="bookmark-transparent"
-              src="./resources/bookmark.png"
-              alt="bookmark transparent"
-            />
-            <h4 class="question-title">6. What is Chandler's last name?</h4>
-            <button>Show Answer</button>
-            <section class="tag-container">
-              <p class="tag">#Chandler</p>
-              <p class="tag">#friends</p>
-            </section>
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">6. What is Chandler's last name?</h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#Chandler</p>
+            <p class="tag">#friends</p>
           </section>
-        </div>
+        </section>
 
-        <div class="question-card question-card-7">
-          <section>
-            <img
-              class="bookmark-transparent"
-              src="./resources/bookmark.png"
-              alt="bookmark transparent"
-            />
-            <h4 class="question-title">
-              7. Which character is a paleontologist by profession?
-            </h4>
-            <button>Show Answer</button>
-            <section class="tag-container">
-              <p class="tag">#paleontologist</p>
-              <p class="tag">#friends</p>
-            </section>
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">
+            7. Which character is a paleontologist by profession?
+          </h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#paleontologist</p>
+            <p class="tag">#friends</p>
           </section>
-        </div>
+        </section>
 
-        <div class="question-card question-card-8">
-          <section>
-            <img
-              class="bookmark-transparent"
-              src="./resources/bookmark.png"
-              alt="bookmark transparent"
-            />
-            <h4 class="question-title">
-              8. What is the name of Rachel's daughter?
-            </h4>
-            <button>Show Answer</button>
-            <section class="tag-container">
-              <p class="tag">#Rachel</p>
-              <p class="tag">#daughter</p>
-            </section>
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">
+            8. What is the name of Rachel's daughter?
+          </h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#Rachel</p>
+            <p class="tag">#daughter</p>
           </section>
-        </div>
+        </section>
 
-        <div class="question-card question-card-9">
-          <section>
-            <img
-              class="bookmark-transparent"
-              src="./resources/bookmark.png"
-              alt="bookmark transparent"
-            />
-            <h4 class="question-title">
-              9. Which character famously says "How you doin'?" as a pick-up
-              line?
-            </h4>
-            <button>Show Answer</button>
-            <section class="tag-container">
-              <p class="tag">#friends</p>
-              <p class="tag">#line</p>
-            </section>
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">
+            9. Which character famously says "How you doin'?" as a pick-up line?
+          </h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#friends</p>
+            <p class="tag">#line</p>
           </section>
-        </div>
+        </section>
 
-        <div class="question-card question-card-10">
-          <section>
-            <img
-              class="bookmark-transparent"
-              src="./resources/bookmark.png"
-              alt="bookmark transparent"
-            />
-            <h4 class="question-title">
-              10. What is the profession of Chandler's wife, Monica?
-            </h4>
-            <button>Show Answer</button>
-            <section class="tag-container">
-              <p class="tag">#Monica</p>
-              <p class="tag">#Chandler</p>
-            </section>
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">
+            10. What is the profession of Chandler's wife, Monica?
+          </h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#Monica</p>
+            <p class="tag">#Chandler</p>
           </section>
-        </div>
+        </section>
       </section>
     </main>
 
