quiz app responsive und centred

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,20 +13,22 @@
     </header>
 
     <main>
-      <section class="question-card">
-        <img
-          class="bookmark-transparent"
-          src="./resources/bookmark_filled.png"
-          alt="bookmark transparent"
-        />
-        <h4 class="question-title">
-          2. What is the surname of Ross and Monica, two of the main characters
-          in Friends?
-        </h4>
-        <button>Show Answer</button>
-        <section class="tag-container">
-          <p class="tag">#Monica</p>
-          <p class="tag">#Ross</p>
+      <section class="question-container">
+        <section class="question-card">
+          <img
+            class="bookmark-transparent"
+            src="./resources/bookmark_filled.png"
+            alt="bookmark transparent"
+          />
+          <h4 class="question-title">
+            2. What is the surname of Ross and Monica, two of the main
+            characters in Friends?
+          </h4>
+          <button>Show Answer</button>
+          <section class="tag-container">
+            <p class="tag">#Monica</p>
+            <p class="tag">#Ross</p>
+          </section>
         </section>
       </section>
     </main>
