--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-      <section>
+      <section class="question-container">
         <section class="question-card">
           <img
             class="bookmark-transparent"
