new colours and profile page

--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,21 @@
     <header>
       <h1 class="title">F.r.i.e.n.d.s Quiz</h1>
     </header>
+    <main class="profile-grid-container">
+      <img
+        class="profile-pic"
+        src="./resources/friends-characters-joey3.jpg.jpg"
+        alt="Joey"
+      />
+      <h3 class="profile-title-name">Joey Tribbiani</h3>
+
+      <h4 class="profile-title-about">About me</h4>
+      <p class="profile-text">
+        I am a fictional character, serving as one of the primary characters of
+        the NBC sitcom Friends and the protagonist of its spin-off Joey. He is
+        portrayed by Matt LeBlanc in both series.
+      </p>
+    </main>
 
     <footer>
       <nav class="navigation-bar">
